# trail-guide-content-server

./: .coveragerc  .gitignore  Dockerfile  MANIFEST.in  NOTICE  README.md  pyproject.toml  requirements.dev.txt  requirements.prod.txt  setup.py  test.bash
.github/workflows/: lint.yml  publish-docker.yml  test.yml
tests/: conftest.py  shared_data.py  test_assets.py  test_db_categories.py  test_db_sections.py  test_routes_assets.py  test_routes_categories.py  test_routes_meta.py  test_routes_sections.py  test_routes_stations.py
trail_guide_content_server/: __init__.py  app.py  assets.py  auth.py  bundles.py  config.py  db.py  object_schemas.py  qr.py  routes.py  schema.sql  types.py  utils.py
trail_guide_content_server/migrations/: 1_add_bundle_size.sql  2_add_coordinate_crs.sql  3_add_asset_usage.py  4_v0_16_0.sql
